[project]
name = "sandbox_llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "anthropic>=0.59.0",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "faiss-cpu>=1.11.0.post1",
    "gradio>=5.38.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "numpy<2.3",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
]
